build_errors.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.10.2/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\service\car\CarServiceImpl.java:1360: error: cannot find symbol
    private double calculateBoostScore(CarResponse car, List<UserPreferenceScore> prefs) {
                                                             ^
  symbol:   class UserPreferenceScore
  location: class CarServiceImpl
> Task :compileJava
1 error

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 25s
1 actionable task: 1 executed
